# CoMM

./: .gitignore  README.md  demo_to_upload_in_colab.ipynb  pyproject.toml
data/: Y.npz
docs/: Tips.rtf
src/comm/: __init__.py  baselines.py  core.py
src/comm/competitors/: __init__.py  einfact_wrapper.py
src/comm/models/: __init__.py  cp.py  tucker.py
src/comm/scripts/: bench_apples.py  bench_cp.py  bench_real_uber.py  bench_sweep.py  bench_tucker.py
src/comm/utils/: __init__.py  plotting.py
