[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comm"
version = "0.1.0"
description = "CoMM: B-CoMM/J-CoMM (contraction-only MM) for CP/Tucker under beta-divergence + MU baselines + NNEinFact wrapper."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "opt_einsum>=3.3",
]

[project.optional-dependencies]
competitors = [
  "torch>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
